Add Hoppify captures gallery
